syntax = "proto3";

package relationship.pkg.bizdata;

option go_package = "app/relationship/pkg/bizdata;bizdata";

message FollowItem {
  int64 to_uid = 1;
  int64 create_time = 2;
}

message FollowList {
  repeated FollowItem list = 1;
}

message RelationCount {
  int64 uid = 1;
  int32 follow_count = 2;
  int32 follower_count = 3;
}

message UserRelation {
  int32 relation = 1;
  int64 follow_time = 2;
  int64 followed_time = 3;
}
